# sat-dp

./: .gitignore  LICENSE  Makefile  README.md  SAT_DP.hs  SatDP.cabal  TODO.md  sat-hs.cabal
examples/: 3.dimacs  contradiction.dimacs  pure_unsat.dimacs  sat.dimacs  simple_sat.dimacs  simple_unsat.dimacs  tautology.dimacs  unit.dimacs
src/: CNF.hs  DIMACS.hs  DP.hs  Main.hs  Main_DP.hs  Main_DPLL.hs  Util.hs  VarOrder.hs
test/: dup.dimacs
