cabal-version:      3.0
name:               sat-hs
version:            0.1.0.0
synopsis:           Various SAT solving algorithms.
license:            MIT
license-file:       LICENSE
author:             Robert Coffey
-- maintainer:         MAINTAINER EMAIL
build-type:         Simple
extra-doc-files:    README.md, LICENSE
extra-source-files: examples/*.dimacs

common settings
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2 -Wall

-- TODO: Add versions to dependencies.

executable sat-dp
    import:           settings
    main-is:          Main_DP.hs
    other-modules:    CNF, DIMACS, Util, VarOrder
    build-depends:    base, optparse-applicative

executable sat-dpll
    import:           settings
    main-is:          Main_DPLL.hs
    other-modules:    CNF, DIMACS, Util, VarOrder
    build-depends:    base, optparse-applicative
